<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenBCI</string>
    <string name="action_settings">Settings</string>
	<string name="bluetooth_label">Bluetooth</string>
	<string name="enable_bluetooth_button">Enable Bluetooth</string>
	<string name="find_device_label">Find Device</string>
	<string name="scan_label">Scan</string>
	<string name="device_info_label">Device Info</string>
	<string name="connect_device_label">Connect Device</string>
	<string name="connect_button">Connect</string>
	<string name="send_label">Send</string>
	<string name="value_label">Value:</string>
	<string name="value_hint">Enter ASCII Command</string>
	<string name="value_button">Send</string>
	<string name="value_button_b">Start</string>
	<string name="value_button_s">Stop</string>
	<string name="receiving_label">Receiving&#8230;</string>
	<string name="view_file_label">View File</string>
</resources>
