<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:baselineAligned="true">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/bluetooth_label" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_bluetooth_button"
            android:id="@+id/enableBluetooth"
            android:enabled="true"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:text="@string/find_device_label"
            android:layout_marginTop="5dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scanStatus" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_label"
            android:id="@+id/scan"
            android:layout_gravity="center_horizontal"
            android:enabled="false" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deviceInfoLabel"
            android:text="@string/device_info_label"
            android:layout_marginTop="5dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deviceInfo" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:text="@string/connect_device_label"
            android:layout_marginTop="5dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectionStatus" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_button"
            android:id="@+id/connect"
            android:layout_gravity="center_horizontal"
            android:enabled="false" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendLabel"
            android:text="@string/send_label"
            android:layout_marginTop="5dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_label"
            android:id="@+id/valueLabel" />
        
        <EditText 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/value_hint"
            android:id="@+id/sendValue"
            android:enabled="false"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_label"
            android:layout_gravity="center_horizontal"
            android:enabled="false" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        	<Button
        	    android:id="@+id/startButton"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:enabled="false"
        	    android:layout_weight="1"
        	    android:text="@string/value_button_b" />
        
         <Button
             android:id="@+id/stopButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:enabled="false"
             android:layout_weight="1"
             android:text="@string/value_button_s" />
            
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiving_label"
            android:id="@+id/receivingLabel"
            android:visibility="invisible" />
        
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:indeterminate="true" 
            android:visibility="invisible"/>
        
        
         <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_file_label"
            android:id="@+id/viewFileButton"
            android:layout_gravity="center_horizontal"
            android:enabled="false" />
         
    </LinearLayout>
</ScrollView>